--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de prueba</title>
+    <title>Página en Construcción</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            text-align: center;
+        }
+
+        h1 {
+            color: #ff6347;
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.5rem;
+            color: #555;
+            margin-bottom: 30px;
+        }
+
+        .image-container {
+            margin-bottom: 30px;
+        }
+
+        img {
+            width: 350px;
+            max-width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        }
+
+        .footer {
+            font-size: 1rem;
+            color: #888;
+            position: absolute;
+            bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Prueba página</h1>
+    <h1>¡Estamos en Construcción!</h1>
+
+    <div class="image-container">
+        <img src="https://via.placeholder.com/500x300/ff6347/ffffff?text=En+Construccion" alt="En construcción">
+    </div>
+
+    <div class="footer">
+        <p>¡Gracias por tu paciencia!</p>
+    </div>
 </body>
 </html>
+
