--- a/index.html
+++ b/index.html
@@ -5,59 +5,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página en Construcción</title>
     <style>
+        /* Estilos globales */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
+            background: linear-gradient(135deg, #FF6347, #FF4500);
+            color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            flex-direction: column;
             text-align: center;
+            flex-direction: column;
         }
 
         h1 {
-            color: #ff6347;
-            font-size: 3rem;
+            font-size: 4rem;
+            font-weight: bold;
             margin-bottom: 20px;
+            text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
         }
 
         p {
             font-size: 1.5rem;
-            color: #555;
+            margin-bottom: 30px;
+            line-height: 1.6;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Contenedor de la animación */
+        .construction-container {
+            position: relative;
+            display: inline-block;
+            width: 150px;
+            height: 150px;
             margin-bottom: 30px;
         }
 
-        .image-container {
-            margin-bottom: 30px;
+        .construction-container::before,
+        .construction-container::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #FFF;
+            animation: blink 1s infinite;
         }
 
-        img {
-            width: 350px;
-            max-width: 100%;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        .construction-container::before {
+            top: 10px;
+            left: 20px;
+            animation-delay: 0.3s;
         }
 
+        .construction-container::after {
+            top: 10px;
+            right: 20px;
+            animation-delay: 0.6s;
+        }
+
+        /* Animación de parpadeo de las señales */
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        /* Estilo de las "barricadas" que simulan el sitio en construcción */
+        .barrier {
+            position: absolute;
+            top: 60px;
+            width: 100%;
+            height: 30px;
+            background-color: #fff;
+            background-image: linear-gradient(45deg, transparent 20%, #FF6347 20%, #FF6347 50%, transparent 50%, transparent 70%, #FF6347 70%, #FF6347 100%);
+            background-size: 20px 20px;
+        }
+
+        /* Pie de página */
         .footer {
-            font-size: 1rem;
-            color: #888;
             position: absolute;
             bottom: 10px;
+            font-size: 1rem;
+            color: #ddd;
         }
+
     </style>
 </head>
 <body>
-    <h1>¡Estamos en Construcción!</h1>
 
-    <div class="image-container">
-        <img src="https://via.placeholder.com/500x300/ff6347/ffffff?text=En+Construccion" alt="En construcción">
+    <h1>¡Estamos en Construcción!</h1>
+    <p>Estamos trabajando en algo increíble. ¡Vuelve pronto!</p>
+
+    <div class="construction-container">
+        <div class="barrier"></div>
     </div>
 
     <div class="footer">
         <p>¡Gracias por tu paciencia!</p>
     </div>
+
 </body>
 </html>
-
