--- a/index.html
+++ b/index.html
@@ -3,119 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página en Construcción</title>
+    <title>En Construcción</title>
     <style>
-        /* Estilos globales */
-        * {
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: linear-gradient(135deg, #f39c12, #e74c3c);
+            color: #fff;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #FF6347, #FF4500);
-            color: white;
+            height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            flex-direction: column;
         }
-
         h1 {
-            font-size: 4rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-            text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+            font-size: 3em;
+            margin: 0;
         }
-
         p {
-            font-size: 1.5rem;
-            margin-bottom: 30px;
-            line-height: 1.6;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            font-size: 1.5em;
+            margin: 10px 0 20px 0;
         }
-
-        /* Contenedor de la animación */
-        .construction-container {
-            position: relative;
-            display: inline-block;
-            width: 150px;
-            height: 150px;
-            margin-bottom: 30px;
+        .loader {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #fff;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
         }
-
-        .construction-container::before,
-        .construction-container::after {
-            content: '';
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #FFF;
-            animation: blink 1s infinite;
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
-
-        .construction-container::before {
-            top: 10px;
-            left: 20px;
-            animation-delay: 0.3s;
-        }
-
-        .construction-container::after {
-            top: 10px;
-            right: 20px;
-            animation-delay: 0.6s;
-        }
-
-        /* Animación de parpadeo de las señales */
-        @keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0.5;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        /* Estilo de las "barricadas" que simulan el sitio en construcción */
-        .barrier {
-            position: absolute;
-            top: 60px;
-            width: 100%;
-            height: 30px;
-            background-color: #fff;
-            background-image: linear-gradient(45deg, transparent 20%, #FF6347 20%, #FF6347 50%, transparent 50%, transparent 70%, #FF6347 70%, #FF6347 100%);
-            background-size: 20px 20px;
-        }
-
-        /* Pie de página */
-        .footer {
-            position: absolute;
-            bottom: 10px;
-            font-size: 1rem;
-            color: #ddd;
-        }
-
     </style>
 </head>
 <body>
-
-    <h1>¡Estamos en Construcción!</h1>
-    <p>Estamos trabajando en algo increíble. ¡Vuelve pronto!</p>
-
-    <div class="construction-container">
-        <div class="barrier"></div>
-    </div>
-
-    <div class="footer">
-        <p>¡Gracias por tu paciencia!</p>
-    </div>
-
+    <h1>¡En Construcción!</h1>
+    <p>Estamos trabajando para traerte algo increíble. ¡Vuelve pronto!</p>
+    <div class="loader"></div>
 </body>
 </html>
