--- a/index.html
+++ b/index.html
@@ -39,11 +39,20 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        footer {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
+            font-size: 1em;
+            color: rgba(255, 255, 255, 0.7);
+        }
     </style>
 </head>
 <body>
     <h1>¡En Construcción!</h1>
     <p>Estamos trabajando para traerte algo increíble. ¡Vuelve pronto!</p>
     <div class="loader"></div>
+    <footer>Created by Bruno Varela</footer>
 </body>
 </html>
