--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             100% { transform: rotate(360deg); }
         }
         footer {
-            position: absolute;
+            position: fixed;
             bottom: 10px;
             width: 100%;
             text-align: center;
             font-size: 1em;
-            color: rgba(255, 255, 255, 0.7);
+            color: #ffffff;
         }
     </style>
 </head>
